# sparse-load

./: .cnb.yml  .gitignore  50G.py  Dockerfile  Dockerfile_old  README.en.md  README.md  accuracy_results.json  attn.py  blend_musique_transformers.py  download_models.sh  ds_flash.py  env_config.sh  example_padding_strategy.py  gen_head_group.py  hf_attn.py  quest_sparse_page.py  triton_attn.py  xformer.py
ArkVale/: .gitignore  README.md  requirements.txt  test_llama3.py  test_mistral.py
ArkVale/benchmark/: longbench_pred copy.py  longbench_pred.py
ArkVale/benchmark/longbench_config/: model2maxlen.json  model2path.json
ArkVale/source/: setup.py
ArkVale/source/arkvale/: infer_state.py  infer_state_backup.py  kernels.py  kv_cache.py
ArkVale/source/arkvale_cpp/: CMakeLists.txt
CacheBlend/example/: blend_musique.py  blend_musique_backup.py  blend_musique_new.py  blend_musique_transformers.py  blend_samsum.py  test.py
InfiniGen-bak/accuracy/lm_eval/: run_lm_eval_harness.py
LongBench/: eval.py  longbench_run.sh  models.py  pred.py  pred.sh
LongBench/config/: model2maxlen.json  model2path.json
SparseCache/accuracy/: README.md
SparseCache/accuracy/benchmark/: RUN_TEST.sh  VANILLA_MODE_FIX_SUMMARY.md  aaa.sh  check_model_class.py  debug_forward.py  longbench_pred.py  longbench_pred_v1.py  longbench_pred_v2.py  minimal_test.py  performance.py  test_fixed.sh  test_rope_fix.py  test_rope_gather.py  verify_fixes.sh
SparseCache/accuracy/lm_eval/: draw.py  draw_compare.py  draw_compare_llama3_cache.py  draw_compare_opt_cache.py  draw_compare_opt_infinigen.py  draw_compare_qwen3_cache.py  evaluate_task_result.py  evaluate_task_result_backup.py  evaluation_openbookqa_5_Qwen2-1.5B-Instruct-cache.json  evaluation_openbookqa_5_Qwen2-1.5B-Instruct.json  evaluation_rte-5-llama-3-8b-inst-262k-arkvale-1024.json  evaluation_rte-5-llama-3-8b-inst-262k-arkvale-4096.json  evaluation_rte-5-llama-3-8b-inst-262k-arkvale-512.json  evaluation_rte-5-llama-3-8b-inst-262k-vanilla.json  evaluation_rte-5-llama-3.1-8B-cache-0.1.json  (+127 more)
SparseCache/speedup/: all_my_cache_bench.sh  get_head_group.py  my_cache_bench.sh  parse_log.py  pic.py  unhit_ana.py
cache_test/: bench.py  bench_load_only.py  cache_ana.py  data_process.py  my_cache_test.py  new_cache_test.py  test.py  vector_bench.py
cache_test/old/: cache_load.py  data_gen.py  group_cache.py  index_test.py  my_cache.py  updata_cache.py
cache_test/tmp/: test1_layer0.pt  test1_layer1.pt  test1_layer10.pt  test1_layer11.pt  test1_layer12.pt  test1_layer13.pt  test1_layer14.pt  test1_layer15.pt  test1_layer16.pt  test1_layer17.pt  test1_layer18.pt  test1_layer19.pt  test1_layer2.pt  test1_layer20.pt  test1_layer21.pt  test1_layer22.pt  test1_layer23.pt  test1_layer24.pt  test1_layer25.pt  test1_layer26.pt  test1_layer27.pt  test1_layer3.pt  test1_layer4.pt  test1_layer5.pt  test1_layer6.pt  test1_layer7.pt  test1_layer8.pt  test1_layer9.pt
csrc/: custom_sdpa_test.cu  sdpa_test  sdpa_test.cu
csrc/cache_bench/: CMakeLists.txt  cache_bench.cpp  cache_bench_cache.cpp  cpu_cache.cpp  cpu_cache.h  cuda_ops.cu
csrc/cache_bench_hashmap/: CMakeCache.txt  CMakeLists.txt  Makefile  bench.cpp  compile.sh  cpu_cache.cpp  cpu_cache.h
csrc/cache_bench_v1/: CMakeCache.txt  CMakeLists.txt  cache_bench.cpp  cmake_install.cmake  cpu_cache.cpp  cpu_cache.h
csrc/cache_bench_v2/: CMakeLists.txt  cache_bench_group_attn.cpp  compile.sh  cpu_cache.cpp  cpu_cache.h
csrc/cache_bench_v3/: CMakeLists.txt  cache_bench_select_v2.cpp  compile.sh  cpu_cache.cpp
csrc/my_cache_load/: bench.py  kv_load_test.py  pybind_wrapper.cpp  setup.py  test.py
csrc/my_cache_load_bak/: pybind_wrapper.cpp  setup.py
csrc/my_cache_load_bak2/: pybind_wrapper.cpp
csrc/vector_cache_test/: CMakeLists.txt  bench.cpp  cache_bench.cpp  cache_bench_select.cpp  compile.sh  cpu_cache.cpp  cpu_cache.h  final_impl.cpp  run.sh  test.cpp
eval_result/: result_bench.txt
infingen-test/: cache_selection_controller.py  cache_selection_controller_v2.py  flex_opt.py  load_test.py  pytorch_backend.py  test_dot.py
playground/: H2O_result.txt  README_gqa_group_comparison.md  accuracy_results.json  accuracy_results_1.json  blend_musique_llama.py  blend_musique_llama_32k_vanilla.txt  blend_musique_llama_hybrid.py  blend_musique_llama_vanilla_backup.py  blend_musique_qwen2.py  blend_musique_qwen2_k=4_no_partial.txt  blend_musique_qwen2_k=4_with_partial.txt  blend_musique_qwen2_no_partial.py  blend_musique_qwen2_vanilla.py  blend_musique_qwen2_vanilla.txt  check_weights.py  cnn_eval.py  compare_performance.py  compute_pool.py  eval.py  eval_all.py  llama_test_acc_musique.py  modeling_qwen2_vanilla_backup.py  modeling_qwen2_wechat.py  modify_llama.py  opt_accuracy_results.json  opt_test_acc_musique.py  opt_test_acc_musique0.py  qwen2-1.5b-low-attention-pool.json  qwen2_accuracy_results_cache_with_partial_weight.json  qwen2_accuracy_results_cache_without_partial_weight.json  qwen2_accuracy_results_infigen_with_partial.json  qwen2_accuracy_results_infigen_without_partial.json  qwen2_gqa_experiment copy.py  qwen2_gqa_experiment.py  qwen2_musique_results_dynamic_k_least_important.json  qwen2_musique_results_k=4_least_important.json  qwen2_musique_results_least_important.json  qwen2_musique_results_vanilla.json  qwen2_samsum_accuracy_results_cache_with_partial.json  qwen2_samsum_accuracy_results_dynamic_k_least_important.json  (+21 more)
playground/results/: Qwen2-1.5B-Instruct_ceval_results_20250622_221607.json  Qwen2-1.5B-Instruct_ceval_results_20250623_093840.json  Qwen2-1.5B-Instruct_ceval_results_20250623_095357.json  Qwen2-1.5B-Instruct_ceval_results_20250623_095834.json
py_module/: cache_selection_controller.py  flex_opt.py  group_attention_test.py  pytorch_backend.py
quest/kernels/: compile_commands.json
script/: gen_head_group.py  opt_6.7b_2_continue_group.json  opt_6.7b_2_group_ids.json  opt_6.7b_group_ids.json  opt_6.7b_one_group_ids.json  opt_categorized_heads.jsonl
script/motivation/: insight_1.py  insight_2.py  insight_3.py  insight_5.py  insight_hitrate.py  tmp.txt
(+383 files in other folders)
